--- a/src/pages/Test/dxz-SBT-details/index.module.less
+++ b/src/pages/Test/dxz-SBT-details/index.module.less
@@ -35,7 +35,7 @@
 	font-size: 20px;
 	line-height: 32px;
 	color: #313436;
-	margin-bottom: 24px;
+	margin-bottom: 0;
 }
 .SBT-img{
 	border-radius: 20px;
@@ -61,6 +61,7 @@
 	color: #777E91;
 	margin-bottom: 8px;
 	width: fit-content;
+	user-select: none;
 }
 .item-content{
 	font-weight: 500;
@@ -85,6 +86,7 @@
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-between;
+	margin-top: 24px;
 }
 .feature-item{
 	padding: 8px 12px;
@@ -104,10 +106,7 @@
 	flex-flow: row nowrap;
 	width: 550px;
 	height: 24px;
-	margin-bottom: 24px;
-	&:last-child{
-		margin-bottom: 0;
-	}
+	margin-top: 24px;
 }
 .SBT-holder-info{
 	display: flex;
@@ -161,6 +160,7 @@
 	margin-bottom: 8px;
 	font-weight: 700;
 	font-size: 12px;
+	user-select: none;
 }
 .SBT-name{
 	font-weight: 700;
@@ -253,10 +253,48 @@
 	white-space: nowrap;
 	margin-right: 8px;
 }
+.SBT-claim-condition{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 16px 24px;
+	width: 100%;
+	height: 56px;
+	background: #F4F5F6;
+	border-radius: 10px;
+	font-weight: 600;
+	font-size: 16px;
+	margin-bottom: 8px;
+	&:last-child{
+		margin-bottom: 24px;
+	}
+}
 :global{
 	.ant-checkbox-wrapper{
 		font-weight: 500;
 		font-size: 16px;
 		user-select: none;
+	}
+}
+.SBT-claim-btn:global(.ant-btn-primary){
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 16px 24px;
+	width: 100%;
+	height: 48px;
+	border-radius: 12px;
+	font-weight: 700;
+	font-size: 16px;
+}
+.SBT-claim-btn:global(.ant-btn-primary[disabled]){
+	text:'You are not eligible';
+	background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), #3772FF;
+	opacity: 0.5;
+	color: #fcfcfd;
+	&:hover{
+		background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), #3772FF;
+		opacity: 0.5;
+		color: #fcfcfd;
 	}
 }
