--- a/src/pages/_BussinessComponents/Sider-Space-Plugin_List/index.module.less
+++ b/src/pages/_BussinessComponents/Sider-Space-Plugin_List/index.module.less
@@ -1,5 +1,5 @@
 
-.plugin-aside-container{
+.plugin-aside-container {
 	width: 212px;
 	height: 100%;
 	padding: 8px 8px 16px 16px;
@@ -11,7 +11,8 @@
 	font-weight: 600;
 	margin-left: -9px;
 }
-.plugin-aside-top{
+
+.plugin-aside-top {
 	margin-bottom: 24px;
 	background-color: rgb(244, 245, 246);
 	border-radius: 8px;
@@ -23,7 +24,8 @@
 	width: 188px;
 	height: 56px;
 }
-.plugin-aside-space-name{
+
+.plugin-aside-space-name {
 	padding: 0px;
 	margin: 0px 43px 0px 16px;
 	font-size: 14px;
@@ -38,13 +40,19 @@
 	display: flex;
 	user-select: unset;
 }
-.plugin-aside-item-selected{
+
+.plugin-aside-item-selected {
 	
 	.plugin-aside-item();
 	background-color: #353945;
-	color: #fff;
+	color: #ffffff;
 }
-.plugin-aside-item{
+
+.plugin-aside-item:hover {
+	background-color: #d9d9d9;
+}
+
+.plugin-aside-item {
 	display: flex;
 	width: 100%;
 	flex-direction: row;
@@ -54,18 +62,18 @@
 	transition: all .2s linear;
 	user-select: none;
 	cursor: pointer;
-	&:hover{
-		background-color: #d9d9d9;
-	}
-	&:first-child{
+	
+	&:first-child {
 		margin-bottom: 24px;
 	}
-	p{
+	
+	p {
 		font-size: 14px;
 		line-height: 24px;
-		margin:0px 0px 0px 16px;
+		margin: 0px 0px 0px 16px;
 	}
 }
+
 .plugin-aside-list::-webkit-scrollbar {
 	width: 4px;
 	height: 10px;
@@ -81,7 +89,8 @@
 .plugin-aside-list::-webkit-scrollbar-thumb:hover {
 	background: #333333;
 }
-.plugin-aside-list{
+
+.plugin-aside-list {
 	display: block;
 	overflow: auto;
 	flex: 1 1 0%;
@@ -91,11 +100,12 @@
 	height: 771px;
 }
 
-.plugin-aside-bottom{
+.plugin-aside-bottom {
 	border-top: 2px solid #e6e8ec;
 	padding-top: 12px;
 }
-.plugin-center-btn:global(.ant-btn){
+
+.plugin-center-btn:global(.ant-btn) {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -103,6 +113,6 @@
 	padding: 8px 32px;
 	width: 100%;
 	height: 40px;
-	border: 2px solid #E6E8EC;
+	border: 2px solid #e6e8ec;
 	border-radius: 12px;
 }
