--- a/src/pages/Space-Info/index.module.less
+++ b/src/pages/Space-Info/index.module.less
@@ -281,7 +281,7 @@
 	
 	&:hover {
 		background: #f4f5f6;
-		
+		border-color: #f4f5f6;
 		svg path {
 			transition: all .3s ease;
 			fill: #141416;
@@ -290,6 +290,7 @@
 	
 	&:focus {
 		background: #f4f5f6;
+		border-color: #f4f5f6;
 	}
 }
 
