--- a/src/pages/Test/dxz-SBT-details/index.module.less
+++ b/src/pages/Test/dxz-SBT-details/index.module.less
@@ -1,69 +1,85 @@
-.SBT-details-container{
+.SBT-details-container {
 	padding: 32px;
 	width: 1200px;
 	height: fit-content;
-	background: #FFFFFF;
+	background: #ffffff;
 	border-radius: 12px;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: flex-start;
 	margin: 64px auto;
 }
-.SBT-details-left{
+
+.SBT-details-mainfield {
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 24px;
+}
+
+.SBT-details-left {
 	width: 598px;
 	height: fit-content;
 	margin-right: 48px;
 }
-.SBT-details-right{
+
+.SBT-details-right {
 	padding: 0 24px;
 	width: 490px;
 	height: fit-content;
 }
-.SBT-info-box{
+
+.SBT-info-box {
 	padding: 24px;
 	width: 100%;
 	height: fit-content;
-	border: 1px solid #E6E8EC;
+	border: 1px solid #e6e8ec;
 	border-radius: 12px;
 	margin-bottom: 20px;
-	&:last-child{
+	
+	&:last-child {
 		margin-bottom: 0;
 	}
 }
-.box-subtitle{
+
+.box-subtitle {
 	font-weight: 600;
 	font-size: 20px;
 	line-height: 32px;
 	color: #313436;
 	margin-bottom: 0;
 }
-.SBT-img{
+
+.SBT-img {
 	border-radius: 20px;
 	width: 598px;
 	height: 598px;
-	border: 1px solid #E6E8EC;
+	border: 1px solid #e6e8ec;
 	background: #17c964;
 	margin-bottom: 20px;
 }
-.SBT-info-item{
+
+.SBT-info-item {
 	display: flex;
 	flex-direction: column;
 	width: fit-content;
 	margin-bottom: 24px;
-	&:last-child{
+	
+	&:last-child {
 		margin-bottom: 0;
 	}
 }
-.item-subtitle{
+
+.item-subtitle {
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 24px;
-	color: #777E91;
+	color: #777e91;
 	margin-bottom: 8px;
 	width: fit-content;
 	user-select: none;
 }
-.item-content{
+
+.item-content {
 	font-weight: 500;
 	font-size: 16px;
 	width: 106px;
@@ -73,7 +89,8 @@
 	white-space: nowrap;
 	user-select: none;
 }
-.minted-content{
+
+.minted-content {
 	font-weight: 600;
 	font-size: 24px;
 	width: 130px;
@@ -82,44 +99,60 @@
 	white-space: nowrap;
 }
 
-.SBT-detail-list{
+.SBT-detail-list {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-between;
 	margin-top: 24px;
 }
-.feature-item{
+
+.feature-item {
 	padding: 8px 12px;
 	width: fit-content;
 	height: 40px;
-	background: #F4F5F6;
+	background: #f4f5f6;
 	border-radius: 8px;
 	margin-right: 16px;
 	font-weight: 600;
 	font-size: 14px;
 	user-select: none;
 }
-.SBT-holder-item{
+
+.SBT-activity-item {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	flex-flow: row nowrap;
-	width: 550px;
+	width: 100%;
 	height: 24px;
-	margin-top: 24px;
+	margin-top: 8px;
 }
-.SBT-holder-info{
+
+.SBT-last-state {
+	font-weight: 600;
+	font-size: 14px;
+	color: #353945;
+	width: 194px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.SBT-holder-info {
 	display: flex;
 	align-items: center;
 	flex-flow: row nowrap;
+	width: 194px;
 }
-.SBT-holder-avatar{
+
+.SBT-holder-avatar {
 	width: 24px;
 	height: 24px;
 	background: #17c964;
 	border-radius: 32px;
 }
-.SBT-holder-name{
+
+.SBT-holder-name {
 	font-weight: 600;
 	font-size: 14px;
 	width: fit-content;
@@ -128,49 +161,61 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	text-align: left;
-	margin-left: 16px;
+	margin-left: 8px;
 }
-.hold-SBT-time{
+
+.Mint-time {
 	font-weight: 500;
 	font-size: 14px;
-	color: #777E91;
-	width: 140px;
+	color: #777e91;
+	width: 194px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
-.hold-SBT-name{
+
+.SBT-amount {
 	font-weight: 600;
 	font-size: 14px;
-	width: 120px;
+	width: 194px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-	text-align: right;
+	text-align: left;
 }
-.certificate-tag{
+
+.certificate-tag {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	padding: 6px 8px;
 	width: 139px;
 	height: 24px;
-	background: #F4F5F6;
+	background: #f4f5f6;
 	border-radius: 4px;
 	margin-bottom: 8px;
+	margin-right: 190px;
 	font-weight: 700;
 	font-size: 12px;
 	user-select: none;
 }
-.SBT-name{
+
+.SBT-name {
 	font-weight: 700;
 	font-size: 40px;
 	line-height: 48px;
 	letter-spacing: -0.01em;
-	color: #23262F;
+	color: #23262f;
 	margin-bottom: 32px;
+	width: 314px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	display: inline-block;
+	margin-top: -16px;
 }
-.some-intro{
+
+.some-intro {
 	width: 100%;
 	height: fit-content;
 	font-style: normal;
@@ -180,39 +225,46 @@
 	color: #353945;
 	margin-bottom: 32px;
 }
-.SBT-key-info{
+
+.SBT-address-info {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
 	height: fit-content;
 	margin-bottom: 8px;
-	svg{
+	
+	svg {
 		cursor: pointer;
 		user-select: none;
-		&:hover{
-			path{
+		
+		&:hover {
+			path {
 				fill: #222528;
 			}
 		}
 	}
 }
-.creator-box{
+
+.creator-box {
 	display: flex;
 	flex-flow: row nowrap;
 }
-.creator-info{
+
+.creator-info {
 	display: flex;
 	flex-flow: column wrap;
 	width: 124px;
 }
-.space-avatar{
+
+.space-avatar {
 	width: 48px;
 	height: 48px;
-	background: #1B1E20;
+	background: #1b1e20;
 	border-radius: 12px;
 	margin-right: 10px;
 }
-.space-name{
+
+.space-name {
 	font-weight: 600;
 	font-size: 16px;
 	width: 124px;
@@ -222,12 +274,14 @@
 	white-space: nowrap;
 	display: block;
 }
-.space-address-box{
+
+.space-address-box {
 	width: 132px;
 	display: flex;
 	align-items: center;
 }
-.space-address{
+
+.space-address {
 	height: 24px;
 	font-weight: 600;
 	font-size: 16px;
@@ -237,13 +291,15 @@
 	white-space: nowrap;
 	margin-right: 8px;
 }
-.contract-address-box{
+
+.contract-address-box {
 	margin-top: 24px;
 	width: 132px;
 	display: flex;
 	align-items: center;
 }
-.contract-address{
+
+.contract-address {
 	height: 24px;
 	font-weight: 600;
 	font-size: 16px;
@@ -253,30 +309,223 @@
 	white-space: nowrap;
 	margin-right: 8px;
 }
-.SBT-claim-condition{
+
+.activity-list-name-box {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 16px;
+	margin-top: 24px;
+	font-weight: 500;
+	font-size: 14px;
+	color: #777e91;
+	
+	span {
+		width: 194px;
+	}
+	
+}
+
+
+.SBT-nonconforming-condition {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	padding: 16px 24px;
 	width: 100%;
 	height: 56px;
-	background: #F4F5F6;
+	background: #f4f5f6;
 	border-radius: 10px;
 	font-weight: 600;
 	font-size: 16px;
 	margin-bottom: 8px;
-	&:last-child{
+	color: #313436;
+	
+	svg {
+		margin-right: 14px;
+	}
+	
+	&:last-child {
 		margin-bottom: 24px;
 	}
 }
-:global{
-	.ant-checkbox-wrapper{
-		font-weight: 500;
-		font-size: 16px;
-		user-select: none;
+
+.SBT-conforming-condition {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 16px 24px;
+	width: 100%;
+	height: 56px;
+	background: #f4f5f6;
+	border-radius: 10px;
+	font-weight: 600;
+	font-size: 16px;
+	margin-bottom: 8px;
+	color: #45b36b;
+	
+	svg {
+		margin-right: 14px;
+	}
+	
+	&:last-child {
+		margin-bottom: 24px;
 	}
 }
-.SBT-claim-btn:global(.ant-btn-primary){
+
+.TokenID {
+	font-weight: 600;
+	font-size: 14px;
+	color: #353945;
+	width: 194px;
+	text-align: left;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.SBT-claim-state {
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 24px;
+	text-align: center;
+	color: #777e91;
+	width: 100%;
+	margin-top: 24px;
+	user-select: none;
+}
+
+.amount {
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 24px;
+	text-align: center;
+	color: #000000;
+	padding-right: 3px;
+}
+
+.SBT-certificate-top {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+}
+
+
+.SBT-pop-item {
+	padding: 8px;
+	width: 196px;
+	height: 40px;
+	background: #ffffff;
+	border-radius: 8px;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 24px;
+	display: flex;
+	align-items: center;
+	color: #777e91;
+	transition: all .20s linear;
+	user-select: none;
+	cursor: pointer;
+	svg {
+		margin-right: 10px;
+	}
+	
+	&:hover {
+		background: #f4f5f6;
+		color: #222528;
+		
+		&:last-child {
+			svg path {
+				fill: #222528;
+			}
+		}
+		
+		&:not(:last-child){ svg path {
+			stroke: #222528;
+		}}
+	}
+}
+
+.SBT-pop-list {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding: 12px;
+	position: relative;
+	width: 220px;
+	height: fit-content;
+	background: #ffffff;
+	box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.15);
+	border-radius: 12px;
+}
+
+.more-info-btn:global(.ant-btn) {
+	width: 48px;
+	height: 48px;
+	background: #f4f5f6;
+	border-radius: 12px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	box-shadow: unset;
+	padding: 0;
+	border: 1px solid #f4f5f6;
+	margin-left: -4px;
+	
+	&:hover {
+		background: #f4f5f6;
+		border-color: #f4f5f6;
+		
+		svg path {
+			transition: all .3s ease;
+			fill: #141416;
+		}
+	}
+	
+	&:focus {
+		background: #f4f5f6;
+		border-color: #f4f5f6;
+	}
+}
+
+.SBT-rules-checkbox:global(.ant-checkbox-wrapper) {
+	font-weight: 500;
+	font-size: 16px;
+	user-select: none;
+	
+	&:hover {
+		:global(.ant-checkbox-inner) {
+			border-color: #45b36b;
+		}
+	}
+	
+	:global(.ant-checkbox-input:focus + .ant-checkbox-inner) {
+		border-color: #45b36b;
+	}
+	
+	:global(.ant-checkbox-inner) {
+		border-radius: 50%;
+		width: 20px;
+		height: 20px;
+	}
+	
+	:global(.ant-checkbox-checked) {
+		&::after {
+			border: unset;
+		}
+		
+		:global(.ant-checkbox-inner) {
+			background: #45b36b;
+			border-color: #45b36b;
+			
+			::after {
+				transform: rotate(45deg) scale(1) translate(-40%, -62%);
+			}
+		}
+	}
+}
+
+.not-eligible-btn:global(.ant-btn-primary) {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -287,14 +536,39 @@
 	font-weight: 700;
 	font-size: 16px;
 }
-.SBT-claim-btn:global(.ant-btn-primary[disabled]){
-	text:'You are not eligible';
-	background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), #3772FF;
+
+.not-eligible-btn:global(.ant-btn-primary[disabled]) {
+	background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), #3772ff;
 	opacity: 0.5;
 	color: #fcfcfd;
-	&:hover{
-		background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), #3772FF;
+	
+	&:hover {
+		background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), #3772ff;
 		opacity: 0.5;
 		color: #fcfcfd;
+	}
+}
+
+:global(.ant-btn-primary) {
+	margin-top: 24px;
+}
+
+.SBT-claimed-btn:global(.ant-btn-primary) {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 16px 24px;
+	height: 48px;
+	border-radius: 12px;
+	font-weight: 700;
+	font-size: 16px;
+	width: 100%;
+	color: rgb(119, 126, 144);
+	background: rgb(244, 245, 246);
+	border: unset;
+	
+	&:hover {
+		color: rgb(119, 126, 144);
+		background: rgb(244, 245, 246);
 	}
 }
