SBT-pad list dev

--- a/src/pages/Test/dxz-SBT-pad-list/index.module.less
+++ b/src/pages/Test/dxz-SBT-pad-list/index.module.less
@@ -30,7 +30,10 @@
 .SBT-show-section{
 	border-radius: 16px 16px 0px 0px;
 	background: #23262F;
-	height: 264px;
+	height: 288px;
+	object-fit: cover;
+	object-position: center;
+	width: 288px;
 }
 .SBT-info-section{
 	background: #ffffff;
