--- a/src/pages/Plugin-SBT-Pad--New/index.module.less
+++ b/src/pages/Plugin-SBT-Pad--New/index.module.less
@@ -18,7 +18,7 @@
 .create-SBT_right {
 	width: 340px;
 	height: fit-content;
-	background: #fcfcfc;
+	background: #ffffff;
 	border-radius: 8px;
 	padding: 24px 24px 28px;
 }
@@ -38,7 +38,7 @@
 	width: 292px;
 	height: 292px;
 	border-radius: 12px;
-	background: #17c964;
+	background: #fcfcfc;
 	margin-bottom: 24px;
 	background-size: 100%;
 	background-repeat: no-repeat;
