--- a/src/pages/Test/dxz-SBT-settings/index.module.less
+++ b/src/pages/Test/dxz-SBT-settings/index.module.less
@@ -41,7 +41,7 @@
 .edit-SBT-settings{
 	display: flex;
 	flex-direction: column;
-	
+	margin-left: 8px;
 }
 .SBT-settings-main-box{
 	padding: 24px;
