--- a/src/pages/Test/dxz-select/index.module.less
+++ b/src/pages/Test/dxz-select/index.module.less
@@ -74,11 +74,11 @@
 }
 
 //单选框样式:
-.single-primary:global(.ant-select-single:not(.ant-select-customize-input)) {
+.primary:global(.ant-select-single:not(.ant-select-customize-input)) {
 	width:100% ;
 	:global(.ant-select-selector) {
 		width:100% ;
-		height: 40px;
+		height: 48px;
 		background: #ffffff;
 		border: 2px solid #e6e8ec;
 		border-radius: 12px;
