--- a/src/pages/Test/dxz-button/index.module.less
+++ b/src/pages/Test/dxz-button/index.module.less
@@ -53,7 +53,7 @@
 			padding: 12px 20px;
 			width: fit-content;
 			height: 48px;
-			background: #3772FF;
+			background: #0070f3;
 			border-radius: 12px;
 			border: unset;
 			font-weight: 700;
