--- a/src/styles/reaxels.module.less
+++ b/src/styles/reaxels.module.less
@@ -137,14 +137,7 @@
 	box-shadow: unset;
 }
 
-.antd-net-select:global(.ant-select) {
-	box-shadow: unset;
-	width: 100%;
-	&:hover{
-		border-color: #777e90;
-	}
-	:global {
-		.ant-select-selector {
+.antd-net-select:global(.ant-select:not(.ant-select-customize-input) .ant-select-selector) {
 			border: 2px solid #e6e8ec;
 			padding: 1px 2px;
 			border-radius: 12px;
@@ -154,7 +147,7 @@
 			&:hover {
 				border-color: #777e90;
 			}
-		}
+		
 		.ant-select-selection-item {
 			display: flex;
 			align-items: center;
@@ -162,6 +155,12 @@
 		}
 		
 	}
+.net-ethereum{
+	font-weight: 600;
+	font-size: 14px;
+	display: flex;
+	align-items: center;
+	padding: 6px 6px 12px 12px;
 }
 
 
