修改SBT-Pad-New样式

--- a/src/pages/Plugin-SBT-Pad--New/index.module.less
+++ b/src/pages/Plugin-SBT-Pad--New/index.module.less
@@ -167,12 +167,14 @@
 	flex-direction: row;
 	align-items: center;
 }
-.divider{
-	width:100%;
-	height: 1px;
-	background: #E6E8EC;
-	margin-bottom: 12px;
-}
+
+// .divider{
+// 	width:100%;
+// 	height: 1px;
+// 	background: #E6E8EC;
+// 	margin-bottom: 12px;
+// }
+
 .subtitle-with-switch{
 	display: flex;
 	justify-content: space-between;
@@ -374,7 +376,19 @@
 	}
 }
 
+.some-intro{
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 11px;
+	color: #777E91;
+	margin-bottom: 5px;
+}
 
-
+.infinite{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
 
 
