code review change suggested

--- a/src/pages/Test/dxz-SBT-details/index.module.less
+++ b/src/pages/Test/dxz-SBT-details/index.module.less
@@ -548,10 +548,10 @@
 		color: #fcfcfd;
 	}
 }
-
-:global(.ant-btn-primary) {
-	margin-top: 24px;
-}
+/*fixme*/
+//:global(.ant-btn-primary) {
+//	margin-top: 24px;
+//}
 
 .SBT-claimed-btn:global(.ant-btn-primary) {
 	display: flex;
