SBT-Pad-New：调整margin值，修复switch开关的打开状态，添加按钮点击发光效果

--- a/src/pages/DesignComponents/SvgOverview/index.module.less
+++ b/src/pages/DesignComponents/SvgOverview/index.module.less
@@ -1,14 +1,23 @@
 .wrapper{
 	display: flex;
 	flex-direction: column;
+	margin: 0 auto;
 	width: fit-content;
-	margin: auto;
 	background-color: white;
 	padding: 16px 24px;
+	height: 100%;
+	overflow-y: hidden;
 
 	:global{
 		.ant-table{
+			height: 100%;
 			width: 700px;
+		}
+	}
+
+	:global{
+		.ant-table-pagination.ant-pagination{
+			display: none;
 		}
 	}
 
@@ -27,9 +36,12 @@
 				justify-content: center;
 				flex-direction: column;
 				align-items: center;
-				height: 100px;
-				padding-top: 10px;
-				padding-left: 10px;
+				min-height: 150px;
+				min-width: 100px;
+				
+				SVG{
+					cursor: pointer;
+				}
 			}
 			// &:nth-child(2n){
 			// 	text-align: center;
@@ -38,3 +50,28 @@
 	}
 }
 
+
+.icon-container{
+	width: 50px;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.icon-name{
+	cursor: pointer;
+}
+
+.icon-categoary{
+	margin-bottom: 30px;
+	background-color: #fafafa;
+}
+
+
+//:global(.ant-table-container){
+//		
+//	&::-webkit-scrollbar-track{
+//		background-color: red;
+//	}
+//}
