--- a/src/pages/Plugin-SBT-Pad--New/index.module.less
+++ b/src/pages/Plugin-SBT-Pad--New/index.module.less
@@ -9,7 +9,7 @@
 	flex-flow: row nowrap;
 }
 .create-SBT_left {
-	margin-right: 24px;
+	margin-right: 8px;
 	width: 836px;
 	height: fit-content;
 	margin-bottom: 48px;
@@ -195,6 +195,10 @@
 
 	:global(.ant-switch.primary--hbOR){
 		background: #B1B5C3;
+	}
+
+	:global(.primary--hbOR.ant-switch-checked){
+		background-color: #0070F3;
 	}
 }
 .sub-title-with-item {
@@ -419,6 +423,11 @@
 		height: 32px;
 		margin-left: 28px;
 		cursor: pointer;
+		border-radius: 48px;
+		&:active{
+			box-shadow: 0px 0px 0px 0px rgb(220, 232, 236);
+			animation: anim-shadow .2s forwards;
+		}
 	}
 
 	:global{
@@ -441,5 +450,17 @@
 		height: 40px;
 		margin-left: 0;
 		cursor: pointer;
+		border-radius: 12px;
+		&:active{
+			box-shadow: 0px 0px 0px 0px rgb(220, 232, 236);
+			animation: anim-shadow .2s forwards;
+		}
+	}
+}
+
+
+@keyframes anim-shadow{
+	100%{
+		box-shadow: 0px 0px 0px 5px rgba(220, 232, 236, 20%);
 	}
 }
