修改分段控制器的圆角

--- a/src/pages/Test/Plugin-SBT-Pad-Revocation/index.module.less
+++ b/src/pages/Test/Plugin-SBT-Pad-Revocation/index.module.less
@@ -40,7 +40,7 @@
 			padding: 4px 4px 4px 4px;
 			width: 481px;
 			background: #F4F5F6;
-			//border-radius: 12px;
+			border-radius: 12px;
 		}
 		
 		.ant-segmented-group{
@@ -50,7 +50,7 @@
 		
 		.ant-segmented-item{
 			padding: 10px 12px;
-			//border-radius: 10px;
+			border-radius: 10px;
 			//background-color: #ffffff;
 		}
 		
@@ -61,8 +61,12 @@
 			overflow: unset;
 		}
 		
-		.ant-segmented-item .ant-segmented-item-selected{
-			//border-radius: 10px;
+		.ant-segmented-item.ant-segmented-item-selected{
+			border-radius: 10px;
+		}
+		
+		.ant-segmented-thumb{
+			border-radius: 10px;
 		}
 	}
 }
