修改Claimed按钮的禁用效果

--- a/src/pages/Test/dxz-SBT-details/index.module.less
+++ b/src/pages/Test/dxz-SBT-details/index.module.less
@@ -671,9 +671,9 @@
 	}
 }
 
-.SBT-claimed-btn:global(.ant-btn:not([disabled])){
-	cursor: not-allowed;
-}
+//.SBT-claimed-btn:global(.ant-btn:not([disabled])){
+//	cursor: not-allowed;
+//}
 
 
 
