修改SBT-detail内Activity区域

--- a/src/pages/Test/dxz-SBT-details/index.module.less
+++ b/src/pages/Test/dxz-SBT-details/index.module.less
@@ -8,12 +8,20 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	margin: 64px auto;
+	
+	.SBT-info-box:nth-child(2){
+		width: 598px;
+	}
 }
 
 .SBT-details-mainfield {
 	display: flex;
 	flex-direction: row;
 	margin-bottom: 24px;
+	
+	.SBT-info-box:nth-child(2){
+		width: 100%;
+	}
 }
 
 .SBT-details-left {
