--- a/src/pages/Test/dxz-SBT-details/index.module.less
+++ b/src/pages/Test/dxz-SBT-details/index.module.less
@@ -58,7 +58,7 @@
 	font-size: 20px;
 	line-height: 32px;
 	color: #313436;
-	margin-bottom: 0;
+	margin-bottom: 24px;
 	user-select: none;
 }
 
@@ -787,7 +787,7 @@
 .desc{
 	display: flex;
 	align-items: center;
-	margin-top: 24px;
+	margin-bottom: 8px;
 	font-family: 'PingFang HK';
 	font-weight: 500;
 	font-size: 16px;
