修改Joined-Space-List内蓝条的hover效果

--- a/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
+++ b/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
@@ -34,10 +34,10 @@
 	
 	.select-vision {
 		.base() {
-			transition: opacity 0.4s ease;
+			transition: 0.3s ease;
 			width: 4px;
 			height: 0px;
-			opacity: 1;
+			opacity: 0;
 			background: #3772ff;
 			border-radius: 0px 4px 4px 0px;
 			display: block;
