--- a/src/pages/Test/Plugin-SBT-Pad-Revocation/index.module.less
+++ b/src/pages/Test/Plugin-SBT-Pad-Revocation/index.module.less
@@ -631,10 +631,10 @@
 					//	&:nth-child(1){
 					//		visibility: visible;
 					//	}
+					////}
+					//:local(.edit-btn){
+					//	visibility: visible;
 					//}
-					:local(.edit-btn){
-						visibility: visible;
-					}
 				}
 			}
 		}
@@ -843,6 +843,10 @@
 	visibility: hidden;
 }
 
+.remove-btn{
+	visibility: hidden;
+}
+
 .sub-content{
 	margin-top: 24px;
 }
@@ -860,4 +864,236 @@
 	SVG{
 		animation: rotate 8s infinite linear;
 	}
+}
+
+
+:global(.ant-table){
+	
+	&:hover{
+		:local{
+			.edit-btn{
+				visibility: visible;
+			}
+			
+			.remove-btn{
+				visibility: visible;
+			}
+		}
+	}
+}
+
+
+.meta-container{
+	display: flex;
+	flex-direction: column;
+	width: 1136px;
+}
+
+.meta-title{
+	width: 1136px;
+	height: 40px;
+	font-weight: 600;
+	font-size: 24px;
+	color: #1A1D1F;
+	margin-bottom: 24px;
+	user-select: none;
+}
+
+.meta-content{
+	display: flex;
+	width: 1136px;
+}
+
+.meta-left{
+	display: flex;
+	flex-direction: column;
+	padding: 0px 24px;
+
+	width: 788px;
+	
+	background: #ffffff;
+	border-radius: 8px;
+	margin-right: 8px;
+}
+
+.meta-right{
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 340px;
+	height: 468px;
+	background: #ffffff;
+	border-radius: 8px;
+}
+
+.preview-title{
+	font-weight: 600;
+	font-size: 14px;
+	color: #33383F;
+	margin-bottom: 16px;
+	user-select: none;
+}
+
+.preview-content{
+	display: flex;
+	flex-direction: column;
+	padding: 24px;
+	
+	width: 340px;
+	height: 428px;
+	
+	background: #FFFFFF;
+	border: 1px solid #E6E8EC;
+	border-radius: 8px;
+}
+
+.preview-img{
+	width: 292px;
+	height: 292px;
+	border-radius: 12px;
+}
+
+.preview-user-info{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 0px;
+	width: 292px;
+	height: 64px;
+	margin-top: 24px;
+}
+
+.SBT-name{
+	font-weight: 600;
+	font-size: 20px;
+	color: #1A1D1F;
+	user-select: none;
+}
+
+.SBT-address{
+	display: flex;
+	align-items: center;
+	font-weight: 600;
+	font-size: 16px;
+	color: #777E91;
+	cursor: pointer;
+	
+	&:hover{
+		color: #1a1d1f;
+		
+		SVG Path{
+			fill: #1a1d1f;
+		}
+	}
+	
+	SVG{
+		margin-left: 8px;
+	}
+	
+}
+
+.sub-title-with-item{
+	display: flex;
+	flex-direction: column;
+	width: 740px;
+	margin-bottom: 34px;
+	
+	&:last-child{
+		margin-bottom: 0;
+	}
+	
+	.sub-title{
+		display: flex;
+		align-items: center;
+		font-weight: 600;
+		font-size: 14px;
+		color: #33383F;
+		user-select: none;
+		margin-bottom: 14px;
+		
+		:global{
+			SVG{
+				margin-left: 5px;
+				cursor: pointer;
+			}
+		}
+	}
+}
+
+.property-input{
+	display: flex;
+	align-items: center;
+	margin-bottom: 12px;
+
+	:global{
+		.ant-input.ant-input-lg{
+			padding: 12px 128px 12px 12px;
+			width: 338px;
+			height: 48px;
+			background: #F4F5F6;
+			border-radius: 12px;
+			margin-right: 20px;
+			
+			&:nth-child(2){
+				margin-right: 12px;
+			}
+			
+			&::-webkit-input-placeholder{
+				font-weight: 600;
+				font-size: 14px;
+				color: #777E91;
+			}
+		}
+	}
+}
+
+.property-input-delete-btn:global(.ant-btn){
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0;
+	width: fit-content;
+	height: fit-content;
+	border-radius: 48px;
+	border: unset;
+	SVG{
+		width: 32px;
+		height: 32px;
+	}
+	
+}
+
+.add-new-SBT-feature-btn:global(.ant-btn){
+	padding: 0;
+	width: 40px;
+	height: 40px;
+	border: unset;
+	border-radius: 12px;
+	display: flex;
+	
+
+	//&:hover{
+	//	border-color: #313436;
+	//	svg path{
+	//		fill: #313436;
+	//	}
+	//}
+}
+
+
+.meta-action-bar{
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	align-items: center;
+	padding: 16px;
+	
+	position: fixed;
+	width: 822px;
+	left: calc(50% - 821px/2);
+	height: 72px;
+	
+	background: rgba(49, 52, 54, 0.7);
+	border-radius: 12px;
+	animation: popIn 0.2s ease-in forwards;
 }
