--- a/src/pages/_BussinessComponents/Sider-Space-Plugin_List/index.module.less
+++ b/src/pages/_BussinessComponents/Sider-Space-Plugin_List/index.module.less
@@ -18,7 +18,7 @@
 	border-radius: 8px;
 	padding: 8px 8px 11px;
 	display: flex;
-	flex-flow: row nowrap;
+	//flex-flow: row nowrap;
 	align-items: center;
 	justify-content: space-between;
 	width: 188px;
@@ -27,18 +27,23 @@
 
 .plugin-aside-space-name {
 	padding: 0px;
-	margin: 0px 43px 0px 16px;
+	margin-left: 5px;
+	//margin: 0px 43px 0px 16px;
 	font-size: 14px;
 	font-weight: bold;
 	color: rgb(53, 57, 69);
 	font-family: inter;
 	font-style: normal;
-	line-height: 20px;
-	width: 53px;
+	line-height: 24px;
+	width: 100px;
 	height: 24px;
-	align-items: center;
-	display: flex;
-	user-select: unset;
+	text-align: center;
+	//align-items: center;
+	//display: flex;
+	cursor: pointer;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 .plugin-aside-item-selected {
