--- a/src/pages/Plugin-SBT-Settings/index.module.less
+++ b/src/pages/Plugin-SBT-Settings/index.module.less
@@ -7,6 +7,7 @@
 	background-color: #ffffff;
 	border-radius: 12px;
 	padding: 32px;
+	
 }
 
 
@@ -1111,9 +1112,13 @@
 	animation: popIn 0.2s ease-in forwards;
 }
 
-:global{
-	.ant-notification-notice{
-		display: flex; 
+
+
+
+
+div{
+	:global(.ant-notification-notice){
+		display: flex;
 		padding: 16px;
 		width: 822px;
 		height: 72px;
@@ -1121,5 +1126,10 @@
 		
 		background: rgba(49, 52, 54, 0.7);
 		border-radius: 12px;
+		
+		:global(.ant-notification-notice-close){
+			display: none;
+		}
+		
 	}
 }
