修改Plugin-SBT-Info

--- a/src/pages/Plugin-SBT-Info/index.module.less
+++ b/src/pages/Plugin-SBT-Info/index.module.less
@@ -708,6 +708,12 @@
 			font-size: 14px;
 			color: #777E91;
 			user-select: none;
+			
+			&:last-child{
+				display: flex;
+				justify-content: flex-end;
+				margin-right: 29px;
+			}
 		}
 	}
 	:global(.ant-table-tbody){
@@ -717,11 +723,15 @@
 			font-size: 14px;
 			color: #353945;
 			user-select: none;
+
 			
 			&:nth-child(2){
 				font-weight: 500;
 				color: #777E91;
+				display: flex;
+				justify-content: flex-end;
 			}
+			
 		}
 	}
 	
