--- a/src/pages/Test/Notification/index.module.less
+++ b/src/pages/Test/Notification/index.module.less
@@ -1,3 +1,20 @@
+.notifi:global(.ant-notification-notice){
+	display: flex;
+	padding: 16px;
+	width: 822px;
+	height: 72px;
+	left: calc(50% - 822px/2 + 131.5px);
+
+	background: rgba(49, 52, 54, 0.7);
+	border-radius: 12px;
+
+	:global(.ant-notification-notice-close){
+		display: none;
+	}
+}
+
+
+
 .wrapper {
 	display: flex;
 	justify-content: space-between;
